--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,124 @@
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image src="img/logotype-mobile.svg" alt="Логотип Mishka">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle main-nav__toogle--image" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a href="catalog.html">Каталог товаров</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Вязание на заказ</a>
+            </li>
+            <li class="site-list__item">
+              <form action="https://echo.htmlacademy.ru" method="get">
+                <input type="search" placeholder="Поиск по сайту">
+              </form>
+            </li>
+            <li class="site-list__item">
+              <a>Корзина: пока пуста</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="page-mane">
+      <h1 class="visually-gidden">Mishka - магазин товаров для дома</h1>
+      <p class="page-mane__slogan">Милые штучки ручной работы для дома</p>
+      <section class="product">
+        <h2 class="visually-hidden">Популярные товары</h2>
+        <ul class="producr__list">
+          <li class="product__item">
+            <a class="product__image product__image--lamp">Предметы для интерьера</a>
+          </li>
+          <li class="product__item">
+            <a class="product__image product__image--toy">Детские игрушки</a>
+          </li>
+        </ul>
+        <div class="product-hit">
+          <h3 class="product-hit__title">Вязаные корзинки</h3>
+          <span class="prodact-hit__">Товар недели</span>
+          <p class="prodact-hit__legend">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех рахмерах.</p>
+          <table class="product-hit__table">
+            <tr>
+              <td class="product-hit__field">Цвет:</td>
+              <td class="product-hit__value">«Тифани»/серый</td>
+            </tr>
+            <tr>
+              <td class="product-hit__field">Диаметр:</td>
+              <td class="product-hit__value">25 см</td>
+            </tr>
+            <tr>
+              <td class="product-hit__field">Высота:</td>
+              <td class="product-hit__value">15 см</td>
+            </tr>
+          </table>
+          <figure class="product-hit__promo">
+            <img class="product-hit__image" src="img/corf.jpg" alt="Фотографии корзинок">
+            <figcaption class="product-hit__price">Цена: 990 руб.</figcaption>
+          </figure>
+          <button class="button" type="button">Заказать</button>
+          <form class="buy-form" action="https://echo.htmlacademy.ru" method="get">
+            <p class="buy-form__text">Добавить в корзину</p>
+            <div class="buy-form__radio">
+              <p class="buy-form__legend">Выберите размер:</p>
+              <div class="buy-form__radio">
+                <label>
+                  <input class="buy-form__radiobutton" type="radio" name="knitted baskets" value="S" checked>
+                  S
+                </label>
+                <label>
+                  <input class="buy-form__radiobutton" type="radio" name="knitted baskets" value="M">
+                  M
+                </label>
+                <label>
+                  <input class="buy-form__radiobutton" type="radio" name="knitted baskets" value="L">
+                  L
+                </label>
+              </div>
+            </div>
+            <button class="buy-form__submit" type="submit">Добавить</button>
+          </form>
+        </div>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <p class="advanteges__promo">Коротко о нас:</p>
+        <ul class="adventeges__list">
+          <li class="advanteges__item advanteges__item--flower">Экологически чистые материалы</li>
+          <li class="advanteges__item advanteges__item--bill">Скандинавский стиль по российской цене</li>
+          <li class="advanteges__item advanteges__item--heart">Увеличивает лайки на фотографиях</li>
+          <li class="advanteges__item advanteges__item--clew">Связано вручную с любовью и умилением</li>
+          <li class="advanteges__item advanteges__item--rocket">Поддержка отечественного производителя</li>
+          <li class="advanteges__item advanteges__item--present">Поставляется в подарочной упаковке</li>
+        </ul>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твитере</a>
+        </li>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <b class="copyright__text">Разработано:</b>
+        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/17">
+          <img class="copyright__link-logo" src="img/academy.svg" alt="Логотип академии">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
