--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
         <img class="page-header__logo-image src="img/logotype-mobile.svg" alt="Логотип Mishka">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle main-nav__toogle--image" type="button">
+        <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="main-nav__wrapper">
@@ -34,7 +34,7 @@
       </nav>
     </header>
     <footer class="page-footer">
-      <div class="page-footer__social social">
+      <ul class="page-footer__social social">
         <li class="social__item">
           <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
         </li>
@@ -44,7 +44,7 @@
         <li class="social__item">
           <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твитере</a>
         </li>
-      </div>
+      </ul>
       <div class="page-footer__copyright copyright">
         <b class="copyright__text">Разработано:</b>
         <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/17">
