Внесение правок и верстка дополнительных блоков

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,23 +51,30 @@
       </div>
     </header>
     <main class="catalog-main">
-      <h2 class="catalog-main__title">Каталог товаров</h2>
+      <div class="catalog-main__wrapper">
+        <h2 class="catalog-main__title">Каталог товаров</h2>
+      </div>
       <ul class="catalog-main__list">
         <li class="catalog-main__item catalog-product">
-          <img class="catalog-product__image" src="img/rabbit.jpg" alt="Фото изделия - Зайца">
+          <div class="catalog-product__picture">
+            <img class="catalog-product__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Фото изделия - Зайца">
+          </div>
           <div class="catalog-product__promo">
             <h3 class="catalog-product__title">Зайчик-попрыгайчик</h3>
             <p class="catalog-product__legend">Рост 30 см, вес 200 г</p>
             <div class="catalog-product__price-and-buy">
-              <b class="catalog-product__price">1200 руб.</b>
+              <b class="catalog-product__price">1 200 руб.</b>
               <a class="catalog-product__basket" href="#">
                 <span class="visually-hidden">Купить</span>
+                <svg class="catalog-product__icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="264.205 370.961 20.294 18.849"><path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0-1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0-1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0-.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0-.316-.596l.854-2.991h.157a.75.75 0 1 0-.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/></svg>
               </a>
             </div>
           </div>
         </li>
         <li class="catalog-main__item catalog-product">
-          <img class="catalog-product__image" src="img/rabbit.jpg" alt="Фото изделия - Корзинки">
+          <div class="catalog-product__picture">
+            <img class="catalog-product__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Фото изделия - Корзинки">
+          </div>
           <div class="catalog-product__promo">
             <h3 class="catalog-product__title">Корзинка для белья</h3>
             <p class="catalog-product__legend">Диаметр 15 см, высота 10 см</p>
@@ -75,24 +82,38 @@
               <b class="catalog-product__price">690 руб.</b>
               <a class="catalog-product__basket" href="#">
                 <span class="visually-hidden">Купить</span>
+                <svg class="catalog-product__icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="264.205 370.961 20.294 18.849"><path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0-1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0-1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0-.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0-.316-.596l.854-2.991h.157a.75.75 0 1 0-.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/></svg>
               </a>
             </div>
           </div>
         </li>
         <li class="catalog-main__item catalog-product">
-          <img class="catalog-product__image" src="img/rabbit.jpg" alt="Фото изделия - Корзина для игрушек">
+          <div class="catalog-product__picture">
+            <img class="catalog-product__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Фото изделия - Корзина для игрушек">
+          </div>
           <div class="catalog-product__promo">
             <h3 class="catalog-product__title">Большая корзинка для игрушек</h3>
             <p class="catalog-product__legend">Диаметр 30 см, высота 30 см</p>
             <div class="catalog-product__price-and-buy">
-              <b class="catalog-product__price">1500 руб.</b>
+              <b class="catalog-product__price">1 500 руб.</b>
               <a class="catalog-product__basket" href="#">
                 <span class="visually-hidden">Купить</span>
+                <svg class="catalog-product__icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="264.205 370.961 20.294 18.849"><path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0-1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0-1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0-.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0-.316-.596l.854-2.991h.157a.75.75 0 1 0-.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/></svg>
               </a>
             </div>
           </div>
         </li>
       </ul>
+      <div class="catalog-video">
+        <h3 class="catalog-video__title">Процесс производства</h3>
+        <div class="catalog-video__image">
+          <img src="img/video-mobile@1x.jpg" width="260" height="150" alt="Видео с производства">
+        </div>
+        <div class="catalog-video__promo">
+          <p class="catalog-video__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+          <a class="catalog-video__button" href="#">Сделать заказ</a>
+        </div>
+      </div>
     </main>
     <footer class="page-footer__wrapper">
       <div class="page-footer">
