--- a/source/form.html
+++ b/source/form.html
@@ -50,6 +50,97 @@
         </nav>
       </div>
     </header>
+    <main class="form-main">
+      <div class="form-main__wrapper">
+        <h2 class="form-main__title">Вязание на заказ</h2>
+      </div>
+      <form class="form-main__about">
+        <p class="form-main__legend">МЫ будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+        <div class="form-main__type form-type">
+          <p class="form-type__legend">Тип</p>
+          <div class="form-type__menu">
+            <label>
+              <input type="radio" name="type" value="acsesuar" checked>
+              <span class="form-type__indicator"></span>
+              Аксессуар для интерьера
+            </label>
+            <label>
+              <input type="radio" name="type" value="toy">
+              <span class="form-type__indicator"></span>
+              Детская игрушка
+            </label>
+          </div>
+        </div>
+        <div class="form-main__color form-color">
+          <p class="form-color__legend">Цвет</p>
+          <div class="form-color__menu">
+            <label>
+              <input type="checkbox" name="white" value="white" checked>
+              <span class="form-color__indicator"></span>
+              Белый
+            </label>
+            <label>
+              <input type="checkbox" name="grey" value="gray" checked>
+              <span class="form-color__indicator"></span>
+              Серый
+            </label>
+            <label>
+              <input type="checkbox" name="tiffany" value="tiffany">
+              <span class="form-color__indicator"></span>
+              «Тиффани»
+            </label>
+            <label>
+              <input type="checkbox" name="black" value="black">
+              <span class="form-color__indicator"></span>
+              Черный
+            </label>
+            <label>
+              <input type="checkbox" name="pink" value="pink">
+              <span class="form-color__indicator"></span>
+              Розовый
+            </label>
+            <label>
+              <input type="checkbox" name="orange" value="orange">
+              <span class="form-color__indicator"></span>
+              Оранжевый
+            </label>
+          </div>
+        </div>
+        <div class="form-main__about form-about">
+          <p class="form-about__fio">ФИО</p>
+          <div class="form-about__name">
+            <label for="name">Имя:</label>
+            <input type="text" id="name" placeholder="Введите ваше имя*">
+          </div>
+          <div class="form-about__family">
+            <label for="family">Фамилия:</label>
+            <input type="text" id="family" placeholder="Укажите фамилию*">
+          </div>
+          <div class="form-about__second-name">
+            <label for="second-name">Отчество:</label>
+            <input type="text" id="second-name" placeholder="Отчество, если желаете">
+          </div>
+        </div>
+        <div class="form-main__contacts form-contacts">
+          <div class="form-contacts__phone">
+            <p class="form-contacts__phone-number">Тел</p>
+            <input type="text" id="phone" placeholder="+7 XXX XXX XX XX*">
+          </div>
+          <div class="form-contacts__email">
+            <p class="form-contacts__email-number">e-mail</p>
+            <input type="email" id="imail" placeholder="Ваш Email*">
+          </div>
+          <div class="form-contacts__yourself">
+            <p class="form-contacts__yourself-about">Доп</p>
+            <textarea placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          </div>
+        </div>
+        <div class="form-main__calling form-calling">
+          <p class="form-calling__legend">*Поля обязательны для заполнения</p>
+          <button class="form-calling__button" type="submit">Отправить заказ</button>
+        </div>
+      </form>
+    </main>
     <footer class="page-footer__wrapper">
       <div class="page-footer">
         <img class="page-footer__image" src="img/logo-footer.svg" width="102" height="34" alt="Логотип Mishka">
