--- a/source/index.html
+++ b/source/index.html
@@ -72,29 +72,27 @@
             <h3 class="product-hit__title">Вязаные корзинки</h3>
             <span class="product-hit__best-product">Товар недели</span>
           </div>
-          <div class="product-hit__about">
-            <div class="product-hit__text">
-              <p class="product-hit__legend">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-              <table class="product-hit__table">
-                <tr>
-                  <td class="product-hit__field">Цвет:</td>
-                  <td class="product-hit__value">«Тиффани»/серый</td>
-                </tr>
-                <tr>
-                  <td class="product-hit__field">Диаметр:</td>
-                  <td class="product-hit__value">25 см</td>
-                </tr>
-                <tr>
-                  <td class="product-hit__field">Высота:</td>
-                  <td class="product-hit__value">15 см</td>
-                </tr>
-              </table>
-              <p class="product-hit__price">Цена: 990 руб.</p>
-              <a class="button" href="#">Заказать</a>
-            </div>
+          <div class="product-hit__text">
+            <p class="product-hit__legend">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+            <table class="product-hit__table">
+              <tr>
+                <td class="product-hit__field">Цвет:</td>
+                <td class="product-hit__value">«Тиффани»/серый</td>
+              </tr>
+              <tr>
+                <td class="product-hit__field">Диаметр:</td>
+                <td class="product-hit__value">25 см</td>
+              </tr>
+              <tr>
+                <td class="product-hit__field">Высота:</td>
+                <td class="product-hit__value">15 см</td>
+              </tr>
+            </table>
             <div class="product-hit__picture">
               <img class="product-hit__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Фотографии корзинок">
             </div>
+            <p class="product-hit__price">Цена: 990 руб.</p>
+            <a class="button" href="#">Заказать</a>
           </div>
         </section>
       </div>
@@ -130,19 +128,23 @@
         </section>
       </div>
       <section class="contacts">
-        <h2 class="contacts__title">Контакты</h2>
-        <table class="contacts__table">
-          <tr>
-            <td class="contacts__field">e-mail:</td>
-            <td class="contacts__value">info@mimimishkashop.ru</td>
-          </tr>
-          <tr>
-            <td class="contacts__field">адрес:</td>
-            <td class="contacts__value">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</td>
-          </tr>
-        </table>
-        <div class="contacts__map"></div>
-        <a class="contacts__write" href="#">Напишите нам</a>
+        <div class="contacts__wrapper">
+          <h2 class="contacts__title">Контакты</h2>
+          <table class="contacts__table">
+            <tr>
+              <td class="contacts__field">e-mail:</td>
+              <td class="contacts__value">
+                <a href="mailto: info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="contacts__field">адрес:</td>
+              <td class="contacts__value">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</td>
+            </tr>
+          </table>
+          <div class="contacts__map"></div>
+          <a class="contacts__write" href="#">Напишите нам</a>
+        </div>
       </section>
     </main>
     <footer class="page-footer__wrapper">
