--- a/source/form.html
+++ b/source/form.html
@@ -10,8 +10,12 @@
     <header class="page-header">
       <div class="page-header__container">
         <nav class="main-nav main-nav--closed main-nav--nojs">
-          <a class="main-nav__logo"  href="index.html">
-            <img class="main-nav__logo-image" width="86" height="35" src="img/logo-mobile.svg" alt="Логотип Mishka">
+          <a class="main-nav__logo" href="index.html">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="main-nav__logo-image" width="86" height="35" src="img/logo-mobile.svg" alt="Логотип Mishka">
+            </picture>
           </a>
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
