Проставил метод отправки формы

--- a/source/form.html
+++ b/source/form.html
@@ -58,7 +58,7 @@
       <div class="form-main__wrapper">
         <h2 class="form-main__title">Вязание на заказ</h2>
       </div>
-      <form class="form-main__about">
+      <form class="form-main__about" action="https://echo.htmlacademy.ru" method="post">
         <p class="form-main__promo">МЫ будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
         <div class="form-main__type">
           <p class="form-main__legend"><span class="form-main__line">Тип</span></p>
